# why

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
c_cpp/: format-specifier.yaml  function-argument-mismatch.yaml  implicit-function-declaration.yaml  linker-library-not-found.yaml  missing-header.yaml  multiple-definition.yaml  redefinition.yaml  undeclared-identifier.yaml  uninitialized-variable.yaml  use-after-free.yaml
cargo/: could-not-compile.yaml  failed-to-fetch.yaml  failed-to-run-custom-build.yaml  feature-not-found.yaml  lock-file-version.yaml  missing-build-dependency.yaml  no-matching-version.yaml  package-not-found.yaml
db/: TEMPLATE.yaml
docker/: container-already-in-use.yaml  image-build-failed.yaml  no-space-left.yaml  no-such-image.yaml
git/: branch-already-exists.yaml  failed-to-push-some-refs.yaml  merge-conflict.yaml  no-tracking-information.yaml  not-a-git-repository.yaml  push-rejected.yaml  rebase-conflict.yaml  stash-conflict.yaml  untracked-would-be-overwritten.yaml
go/: cannot-convert.yaml  cannot-use-type.yaml  deadlock.yaml  imported-not-used.yaml  index-out-of-range.yaml  interface-not-implemented.yaml  invalid-operation.yaml  missing-return.yaml  multiple-value-in-single-context.yaml  no-required-module.yaml  panic-runtime-error.yaml  range-on-non-iterable.yaml  too-many-arguments.yaml  undefined.yaml
npm/: e404.yaml  eacces.yaml  eaudit.yaml  eexist.yaml  eintegrity.yaml  eneedauth.yaml  enetwork.yaml  engine-unsupported.yaml  enogit.yaml  enospc.yaml  eotp.yaml  (+2 more)
(+193 files in other folders)
